@@ -1304,6 +1304,20 @@ class Report:
             self._p(self.criteria)
             self._hr()
 
+    def UpdateTables(self):
+        """
+        Checks the query, and if it finds tables of generated data that the report is 
+        dependent on, runs the necessary processes to update that table.
+        Currently works for monthly and annual figures, but it does slow things down a bit.
+        Decided not to do this for ownerlookingfor or lostfoundmatch as they would be even slower.
+        """
+        if self.sql.find("animalfigures"):
+            seldate = asm3.i18n.parse_date('%Y-%m-%d', self.params[0][3])
+            if seldate: asm3.animal.update_animal_figures(self.dbo, seldate.month, seldate.year)
+        if self.sql.find("animalfiguresannual"):
+            selyear = asm3.utils.cint(self.params[0][3])
+            asm3.animal.update_animal_figures_annual(self.dbo, selyear)
+
     def Execute(self, reportId = 0, username = "system", params = None):
         """
         Executes a report
@@ -1690,6 +1704,10 @@ class Report:
 
         # Output any criteria given at the top of the report
         self.OutputCriteria()
+
+        # If this report relies on tables that are generated by a process (eg: figures reports and animalfigures)
+        # run that process to make sure the data is upto date.
+        self.UpdateTables()
 
         # Run the query
         rs = None
